<resources>
    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="app_name">Family Fit</string>
    <string name="action_settings">Settings</string>
    <string name="service_started">Service started.</string>
    <string name="service_stopped">Service stopped.</string>
    <string name="go">Go!</string>
    <string name="stop">Stop!</string>
    <string name="restart">Restart</string>
    <string name="again">Let\'s do it again!</string>
    <string name="start">Start</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="rewards">Rewards</string>
    <string name="time_limit">Time Limit</string>
    <string name="reached_time_limit_30_minutes">You have reached the time limit of 30 minutes.</string>
    <string name="lost_connection">Connection Lost :(</string>
    <string name="connection_lost_restart">Connection lost.  Please restart your run.</string>
    <string name="done">Done</string>
    <string name="msg_activity_tracker_no_movement">No movement detected. Click OK to continue tracking.</string>
    <string-array
    name="string_array_activity_types">
    <item>1,walk</item>
    <item>2,run</item>
    <item>3,scooter</item>
    <item>4,bike</item>
    <item>5,hike</item>
    <item>6,swim</item>
    </string-array>
    <string-array
        name="activity_types">
        <item>walk</item>
        <item>run</item>
        <item>scooter</item>
        <item>bike</item>
        <item>hike</item>
        <item>swim</item>
    </string-array>
    <string-array name="avatar_images">
        <item>avatar_1</item>
        <item>avatar_2</item>
        <item>avatar_3</item>
        <item>avatar_4</item>
        <item>avatar_5</item>
        <item>avatar_6</item>
        <item>avatar_7</item>
        <item>avatar_8</item>
    </string-array>
    <string-array name="admin_login_preferences">
        <item>Require re-type login</item>
        <item>Remember login</item>
    </string-array>
    <string-array name="activity_history_search_options">
        <item>this week</item>
        <item>last week</item>
        <item>this month</item>
        <item>last 3 months</item>
    </string-array>
    <string-array name="months_short">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="activity_count">
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string-array name="secret_questions">
        <item>What was your third grade teacher\'s last name?</item>
        <item>What was the name of your childhood crush?</item>
        <item>Who was your childhood hero?</item>
    </string-array>
    <string name="nav_menu_start">Start</string>
    <string name="nav_menu_coins">Coins</string>
    <string name="nav_menu_charts">Charts</string>
    <string name="nav_menu_admin">Admin</string>
    <string name="admin_tab_requests">Pending</string>
    <string name="admin_tab_rewards">Rewards</string>
    <string name="admin_tab_users">Users</string>
    <string name="admin_tab_history">History</string>
    <string name="admin_tab_settings">Settings</string>
    <string name="admin_remember_login">Remember username and password</string>
    <string name="number_activities"># activities to display:</string>
    <string name="button_save">Save</string>
    <string name="button_continue">Continue</string>
    <string name="button_signin">Sign In</string>
    <string name="button_search">Search</string>
    <string name="button_display">Display</string>
    <string name="header_admin_registration">Admin Registration</string>
    <string name="header_admin_login">Admin Login</string>
    <string name="admin_role_description">You are the Admin for this app.  The Admin has the ability to manage Users, Rewards, and Activities.</string>
    <string name="hint_delete_user">delete user</string>
    <string name="hint_edit_user">edit user</string>
    <string name="hint_save_user">save user</string>
    <string name="hint_user_reward">description of reward for this user</string>
    <string name="hint_points"># coins</string>
    <string name="hint_reward_title">reward title</string>
    <string name="hint_delete_activity">delete activity</string>
    <string name="app_bar_header_admin">Admin</string>
    <string name="app_bar_header_new_user">New User</string>
    <string name="app_bar_header_edit_user">Edit User</string>
    <string name="message_update_reward">Save successful.</string>
    <string name="error_message_update_reward">An error occurred. Try again.</string>
    <string name="message_update_reward_earned">Update successful.</string>
    <string name="error_message_update_reward_earned">An error occurred. Try again.</string>
    <string name="message_saved_changes">Your changes have been saved.</string>
    <string name="error_message_add_user">An error occurred in adding User.  Try again.</string>
    <string name="message_added_user">User has been added.</string>
    <string name="message_username_empty">Please enter a username.</string>
    <string name="message_weight_empty">Please enter a weight.</string>
    <string name="message_delete_user">All data associated with this user will be lost.  Alternatively, you can Cancel and rename the User so as not to lose the associated data.  Then create a new User.</string>
    <string name="message_delete_activity">All data associated with this activity will be lost, including points earned and rewards earned.</string>
    <string name="message_username_exists">That username is taken.  Try another.</string>
    <string name="message_discard_activity_title">Discard Activity?</string>
    <string name="message_discard_activity">Are you sure you want to discard this activity?</string>
    <string name="message_no_location_data_restart">No location data collected. Restart activity?</string>
    <string name="message_same_user_settings">These are the same original settings.</string>
    <string name="message_continue_tracker">Signal too weak to get location.  Please be sure you are outside and away from obstructions. Cancel activity or wait for connection?</string>
    <string name="message_continue_tracker_title">Continue?</string>
    <string name="message_registration_failed">Registration failed.  Please try again.</string>
    <string name="message_registration_success">Registration complete.</string>
    <string name="message_password_mismatch">Password does not match.</string>
    <string name="secret_question">Pick a secret question to answer</string>
    <string name="secret_answer">answer to the secret question</string>
    <string name="message_email_mismatch">Email does not match.</string>
    <string name="message_admin_login_failed">Admin login failed.</string>
    <string name="message_enter_password">Please enter a password</string>
    <string name="message_activity_deleted">Activity deleted.</string>
    <string name="message_admin_password_changed">Your password has been updated.</string>
    <string name="message_battery_low_auto_shutoff">Your battery is running low. Tracking has stopped to conserve power.</string>
    <string name="message_no_location_permission">Without location permission, location data cannot be tracked.</string>
    <string name="message_weight_non_zero">Enter a weight greater than zero.</string>
    <string name="message_coins_non_zero">Enter a value for coins.</string>
    <string name="title_activity_sensor_api">SensorAPI</string>
    <string name="title_activity_fused_location_api">FusedLocationApi</string>
    <string name="title_activity_activity_chooser">Activity Chooser</string>
    <string name="feet_per_minute">ft per min.</string>
    <string name="activity_history">ActivityHistory</string>
    <string name="reward_view">Reward View</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save_this_activity">Save this activity?</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="coins_earned">Coins earned:</string>
    <string name="distance_in_feet">Distance (ft.):</string>
    <string name="participants">Participants:</string>
    <string name="next">Next</string>
    <string name="not_participant">Not participating</string>
    <string name="preference_userIdList">preferenceUserIdList</string>
    <string name="preference_activityTypeList">preferenceActivityTypeList</string>
    <string name="preferences_multiChooserRecyclerAdapter">preferencesMultiChooserRecyclerAdapter</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="pick_activity">Pick an activity:</string>
    <string name="not_participating">Not participating</string>
    <string name="activity_cancelled">Activity cancelled.</string>
    <string name="activity_saved">Activity saved.</string>
    <string name="user_profiles">User Profiles</string>
    <string name="users">Users</string>
    <string name="weight">weight:</string>
    <string name="weight_hint">weight (lbs)</string>
    <string name="pounds">lbs</string>
    <string name="update">Update</string>
    <string name="browse">Browse</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="avatar">avatar</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">email address</string>
    <string name="confirm_email">confirm email</string>
    <string name="is_admin">is admin</string>
    <string name="admin">Admin</string>
    <string name="admin_name">admin name</string>
    <string name="astericks">*</string>
    <string name="history">History</string>
    <string name="youEarned">You earned</string>
    <string name="admin_password_changed_subject">Family Fit: Admin Password Changed</string>
    <string name="admin_password_changed_body">This is an email notifying you that someone has changed the admin password for Family Fit app.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="confirm_delete_message">Are you sure you want to delete </string>
    <string name="button_delete">DELETE</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_wait">WAIT</string>
    <string name="title_delete_user">Are you sure you want to delete this user?</string>
    <string name="title_delete_activity">Are you sure you want to delete this activity?</string>
    <string name="title_battery_low">Battery Low</string>
    <string name="hint_admin">Parent or Admin</string>
    <string name="button_add">Add</string>
    <string name="fulfill">Fulfilled</string>
    <string name="link_avatar_attribution">&lt;a href=\"https://thenounproject.com/sachan/collection/animals/?oq=animal%20sachan&amp;cidx=8\"Sachan from The Noun Project&lt;/a>"</string>
    <string name="sachan_link">Avatars by Sachan from The Noun Project</string>
    <string name="weeks_ago">Week(s) Ago</string>
    <string name="this_week">This Week</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>