<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/start_24"
            android:title="@string/start" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/reward_24"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/reward_24"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_user_profiles"
            android:icon="@drawable/user_profile_24"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24"
            android:title="@string/admin" />
    </group>

</menu>