<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_header_height"
        android:background="@color/primary_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_header_height"
            android:gravity="center"
            style="@style/LabelSmallWhite"
            android:text="@string/header_admin_login"/>

    </RelativeLayout>
    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>
    <Spinner
        android:id="@+id/admin_preference_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>
</LinearLayout>