<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar"/>
    <RelativeLayout
        android:id="@+id/weightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName">
        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/weight"
            android:layout_toEndOf="@id/weight"
            android:paddingLeft="4dp"
            android:text="@string/pounds"/>
    </RelativeLayout>
    <CheckBox
        android:id="@+id/isAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_admin"
        android:layout_below="@id/weightLayout"/>
    <Button
        android:layout_width="@dimen/button_long"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/weightLayout"
        android:layout_centerInParent="true"/>

</RelativeLayout>
