<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avloadingIndicatorView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="visible"
                app:indicator="BallPulse"
                app:indicator_color="@color/primary_color"
                android:layout_centerInParent="true"
                />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Looking for signal..."
            android:layout_below="@+id/avloadingIndicatorView"
            android:gravity="center_horizontal"

                />
        </RelativeLayout>
<LinearLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_below="@+id/loading_layout"
    >
    <LinearLayout
        android:id="@+id/counterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                style="@style/LabelSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="COINS"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/coins"
                    style="@style/HeaderFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/gold_coin"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="DISTANCE"/>

                <TextView
                    android:id="@+id/distance"
                    style="@style/HeaderFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"/>

                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Feet"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TIMER"/>

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format="%s"
                    android:gravity="center"
                    android:textColor="#551a8b"
                    android:textSize="40sp"/>

                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Minutes"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="SPEED"/>

                <TextView
                    android:id="@+id/feetPerMinute"
                    style="@style/HeaderFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"/>

                <TextView
                    style="@style/LabelSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/feet_per_minute"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="75dp"/>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="25dp"
            >

            <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/go"
                android:background="@color/green"
                android:textColor="@color/white"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:text="Stop"
                android:visibility="gone"
                android:background="@color/red"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/pauseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:text="Pause"
                android:visibility="gone"
                android:background="@color/blue"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/resumeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:text="Resume"
                android:visibility="gone"
                android:background="@color/green"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:text="@string/cancel"
                android:visibility="gone"
                android:background="@color/red"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:text="Save Activity"
                android:visibility="gone"
                android:background="@color/green"
                android:textColor="@color/white"
                />



        </LinearLayout>
    </FrameLayout>

</LinearLayout>

</RelativeLayout>